--- a/src/main.tex
+++ b/src/main.tex
@@ -280,7 +280,7 @@
 \begin{cvtableNew}
   \cvitemRightNew
       {Jan, 2020 – now} % Date
-      {Full stack developer (+devops) | Tech lead} % Job title
+      {Full stack developer (and devops) | Tech lead} % Job title
       {difuze inc} % Company
       {
         \vspace{0.1pt} % Added space before "Role"
@@ -288,7 +288,7 @@
         \textbf{Role}: Similar to the mission at LVL Studio. Key projects include:\vspace{5pt}
 
         \begin{itemize}[itemsep=-1mm, topsep=0pt, leftmargin=8pt]
-          \item \textbf{difuzego.com:} Angular 14 upgrade, MFA authentication implementation, assisted in migrating ElasticSearch data to PostgreSQL (Knex-compliant models). Built a file upload module using AWS Step Functions for compressed proxies. Enhanced workflows with on-prem Node.js workers (Express) and SQLite. Worked on MPEG/DASH encoding (AWS Mediaconvert, later Hybrik), HLS (AWS EC2 MacOS, later FFMPEG), and AES-128 encryption. Techs: Sqlite, PostGres, Bitmovin, VideoJs, Accurate Player, compression, encryption.\vspace{5pt}
+          \item \textbf{difuzego.com:} Angular 14 upgrade, MFA authentication implementation, assisted in migrating ElasticSearch data to PostgreSQL (Knex-compliant models). Built a file upload module using AWS Step Functions for compressed proxies. Enhanced workflows with on-prem Node.js workers (Express) and SQLite. Worked on MPEG/DASH encoding (AWS Mediaconvert, later Hybrik), HLS (AWS EC2 MacOS, later FFMPEG), and AES-128 encryption. Techs: CanvasJS, bandit, Bitmovin, VideoJs, Accurate Player, compression, encryption.\vspace{5pt}
           \item \textbf{difuzevox.com:} Integrated Azure Text-to-Speech and Auphonic API (mixing), local processing with ffmpeg, mediaInfo. Used ttml to generate voices, Video.js for multimedia. Managed Terraform infra. Led a team of 3 devs + 1 QA.\vspace{5pt}
           \item \textbf{AI Detection Project:} Developed solutions for detecting mouth shapes ("pucker"), scene changes, and burnt-in text using 3rd-party AI tools. Managed multi-window/browser communication (postMessage API).\vspace{5pt}
         \end{itemize}
@@ -403,7 +403,7 @@
 
   \cvitemRightNew
     {Dec, 2014 – Apr, 2015} % Date
-    {Android + NodeJS Developer for IoT} % Job title
+    {Mobile and Backend Developer | Android \& NodeJS} % Job title
     {Cisco} % Company
     {
       \vspace{1pt} % Add space before "Project"
@@ -423,7 +423,7 @@
 
     \cvitemRightNew
     {Aug, 2014 – Dec, 2014} % Date
-    {HTML5/JS Front-End Developer} % Job title
+    {Front-End developer | HTML \& JS | Digital TV apps} % Job title
     {Cisco} % Company
     {
       \vspace{1pt} % Add space before "Project"
@@ -457,7 +457,7 @@
 \begin{cvtableNew}
   \cvitemRightNew
     {Jan, 2014 – Jul, 2014} % Date
-    {BackboneJS + ThreeJS Front-End Developer} % Job title
+    {Interactive Front-End coder | BackboneJS \& ThreeJS} % Job title
     {Cisco} % Company
     {
       \vspace{1pt}
@@ -472,14 +472,16 @@
 
   \cvitemRightNew
     {Mar, 2013 – Jan, 2014} % Date
-    {CSS3D + HTML5/JS Front-End Developer} % Job title
-    {NDS Technologies} % Company
+    {Creative CSS3D/HTML5/JS for embedded devices } % Job title
+    {NDS} % Company
     {
       \vspace{1pt}
       \fontsize{10.8pt}{12pt}\selectfont % Subtle font increase
       \textbf{Project}: HTML5 development for smart TVs, HDMI stick, Raspberry Pi, tablets.\par
       \vspace{4pt}
-      \textbf{Responsibilities}: Built features with HTML5, CSS3D, WebGL, BackboneJS, ThreeJS (Collada), Tween.js. Optimized HW performance for QT5/WebKit, WebKitNix, Chromium. Cross-compiled web engines and gstreamers to target LG TVs, Raspberry Pi, Cotton Candy, MacOS rendering the same webapp.\par
+      \textbf{Responsibilities}: Built features with HTML5, CSS3D, WebGL, BackboneJS, ThreeJS (Collada), Tween.js.
+      Optimized HW performance for QT5/WebKit, WebKitNix, Chromium. Cross-compiled web engines and gstreamers to target LG TVs,
+      Raspberry Pi, Cotton Candy, MacOS rendering the same webapp.\par
       \vspace{4pt}
       \textbf{Outcome}: Delivered high-performance solutions attracting Belgacom \& Zon TV.\par
     }
@@ -489,7 +491,7 @@
 
   \cvitemRightNew
     {Aug, 2012 – Feb, 2013} % Date
-    {AngularJS | BackboneJS Front-End Developer} % Job title
+    {Front-End | AngularJS \& Backbone | Digital TV} % Job title
     {Cisco (ex NDS)} % Company
     {
       \vspace{1pt}
@@ -506,14 +508,14 @@
 
   \cvitemRightNew
     {Dec, 2010 – Jul, 2012} % Date
-    {WebKit / QT Developer} % Job title
-    {NDS Technologies} % Company
+    {Embedded Systems Developer | WebKit/QT \& HTML5} % Job title
+    {NDS} % Company
     {
       \vspace{1pt}
       \fontsize{10.8pt}{12pt}\selectfont % Subtle font increase
       \textbf{Project}: QT/WebKit integration on specialized chips, performance, compliance.\par
       \vspace{4pt}
-      \textbf{Responsibilities}: Cross-compiled QT/WebKit for various chipsets, developed Java-QT bridges for {QWebView, Android WebView}. Automated binary distribution via shell (IN, IL), packaged HTML5 as .CRX for corporate app store.\par
+      \textbf{Responsibilities}: Cross-compiled QT/WebKit for various STB chipsets, developed Java-QT bridges for QWebView (Android, Qt). Automated binary distribution via shell (IN, IL), packaged HTML5 as .CRX for corporate app store.\par
     }
     {Paris (FR)} % Location on the second line, aligned to the right
 
@@ -546,7 +548,7 @@
 
   \cvitemRightNew
     {Sep, 1999 – Dec, 2001} % Date
-    {Pay-TV System Integrator} % Job title
+    {Pay-TV System Integrator, Content Delivery Network} % Job title
     {Canal+} % Company
     {
       \vspace{1pt}
@@ -563,7 +565,7 @@
 
     \cvitemRightNew
     {Oct, 1998 – Aug, 1999} % Date
-    {DSP Engineer: AEC for Mobiles} % Job title
+    {DSP Engineer | Acoustic Echo Cancellation} % Job title
     {ALTEN} % Company
     {
       \vspace{1pt}
