update FR and AN source files

--- a/src/main.english.tex
+++ b/src/main.english.tex
@@ -331,7 +331,7 @@
 
         \textbf{AWS DevOps}: Experience with ElasticBeanStalk, EC2, S3, Lambda layers, CloudWatch, IAM, ECR, SES, SNS, VPC. Infra deployed with Cloudformation.\vspace{5pt}
 
-        \textbf{Additional Work}: Maintained legacy PHP/YII stack and MySQL RDS; minor C\# developments supervised over Mono on Ubuntu\.vspace{5pt}
+        \textbf{Additional Work}: Maintained legacy PHP/YII stack and MySQL RDS; minor C\# developments supervised over Mono on Ubuntu.\vspace{5pt}
 
         \textbf{Architecture}: Monolithic, no microservice. Data model shared between UI \& API. Common gitlab repository for front-end and back-end.\vspace{5pt}
 
