--- a/src/main.french.tex
+++ b/src/main.french.tex
@@ -293,7 +293,7 @@
       \item \textbf{Projet IA :} Développment de solutions pour détecter les formes de bouche ("moue"), changements de scène, et texte incrusté à l'aide d'outils IA tiers. Gestion de la communication multi-fenêtres/navigateurs (API postMessage).\vspace{5pt}
     \end{itemize}
 
-    \textbf{CI/CD :} Déploiements Kubernetes on-premises.\vspace{5pt}
+    \textbf{CI/CD :} Déploiements Kubernetes sur site (on-premises).\vspace{5pt}
 
     \textbf{Modules NPM :} axios, knex, objection, pg, qrcode, speakeasy, srt2vtt, unirest, uuid-validate, jest, mysql-json, puppeteer, ngx-device-detector, videojs-playlist, videojs-wavesurfer, ngx-virtual-scroller, http-proxy, chalk, bcrypt...
   }
@@ -305,39 +305,38 @@
 
   \cvitemRightNew
     {Sep, 2017 – Jan, 2020} % Date
-    {Full-Stack coder, Media Asset Management} % Job title
+    {Développeur Full-Stack, gestion des actifs médias} % Job title
     {LVL Studio} % Company (without location here)
       {
         \vspace{0.2pt} % Add space before "Role"
         \fontsize{10.8pt}{12pt}\selectfont % Subtle font increase
-        \textbf{Role}: As a key contributor to Difuze’s new software stack, I took part in architectural decisions,
-        module development, component creation. Proactively managed the backlog using Jira, conducted code reviews via GitLab, maintained detailed documentation in Confluence. In a B2B environment with Difuze Inc. as primary client, focused on elaborating difuzego.com as main product.\vspace{5pt}
+        \textbf{Role}: En tant que contributeur clé à la nouvelle stack logicielle de Difuze, j’ai participé aux décisions architecturales, au développement de modules et à la création de composants. J’ai géré de manière proactive le backlog via Jira, réalisé des revues de code sur GitLab et maintenu une documentation détaillée dans Confluence. Le tout dans un environnement B2B chez Difuze.\vspace{5pt}
 
         \vspace{0.1pt} % Add space before "Projects"
         \textbf{Projects:}
         \begin{itemize}[itemsep=1mm, topsep=5pt, leftmargin=8pt]
-          \item \textbf{showcase.com}: Old legacy stack based on YII written in PHP, along with scripts in C\# for scheduling tasks like cron jobs
-          \item \textbf{difuzego.com}: New stack based on \textit{modern} AWS features written in TS.
+          \item \textbf{showcase.com}: Ancienne pile YII en PHP, avec scripts C\# pour automatisation (cron jobs).
+          \item \textbf{difuzego.com}: Nouvelle pile basée sur des services AWS, écrite en TS.
         \end{itemize}
 
         \vspace{4pt} % Add space before "Purpose"
-        \textbf{Purpose}: Development based on a Media Asset Management system accessed through HTTPS requests using SOAP protocol, enabling content display in catalog form, with the ability to share films as screeners, as promotional links in email, preceding deliveries as orders.\vspace{5pt}
+        \textbf{Purpose}: Développement basé sur un système de gestion des ressources médias (MAM), accessible via HTTPS et le protocole SOAP, permettant l’affichage du contenu en catalogue, ainsi que le partage de films en screeners ou liens promotionnels, en amont des livraisons sous forme de commandes.\vspace{5pt}
 
-        \textbf{Front-end}: Angular 2 (v7.2.9), RxJS, Angular Material, also including various NPM modules like ngx-translate, bitmovin, fs-symlink, hammerjs, ngx-perfect-scrollbar, fortawesome, xml2js, subtitle-converter, socket.io-client, react-image-file-resizer, ng2-file-upload, moment-timezone, i18n-iso-countries, d3, bowser, jsoneditor, lodash, jschardet, etc\vspace{5pt}
+        \textbf{Front-end}: Angular 2 (v7.2.9), RxJS, Angular Material, ainsi que divers modules NPM tels que ngx-translate, Bitmovin, fs-symlink, HammerJS, ngx-perfect-scrollbar, FontAwesome, xml2js, subtitle-converter, socket.io-client, react-image-file-resizer, ng2-file-upload, moment-timezone, i18n-iso-countries, d3, Bowser, JSONEditor, Lodash, jschardet, etc.\vspace{5pt}
 
-        \textbf{Back-end}: RESTful services with OpenAPI, TypeScript Oriented Architecture (tsoa), and NPM imports like exceljs, fs-extra, mustache, socket.io, winston-console-formatter, winston-cloudwatch, uuid-validate, useragent, restify-cors-middleware, restify-errors, reflect-metadata, mime-types, jsonwebtoken, form-data, camelcase, aws-sdk, Promise, async/await...\vspace{5pt}
+        \textbf{Back-end}: Services RESTful avec OpenAPI, architecture orientée TypeScript (tsoa), et utilisation de modules NPM tels que exceljs, fs-extra, mustache, socket.io, winston-console-formatter, winston-cloudwatch, uuid-validate, useragent, restify-cors-middleware, restify-errors, reflect-metadata, mime-types, jsonwebtoken, form-data, camelcase, aws-sdk, Promise, async/await...\vspace{5pt}
 
-        \textbf{Package Management}: Proficient with WebPack, Node.js, nvm, and yarn.\vspace{5pt}
+        \textbf{Package Management}: Bonne maîtrise de WebPack, Node.js, nvm et yarn.\vspace{5pt}
 
-        \textbf{Database and Search}: Managed both legacy (MySQL RDS) and new stack (DynamoDb, ElasticSearch).\vspace{5pt}
+        \textbf{Database and Search}: Gestion à la fois de l’ancienne pile (MySQL RDS) et de la nouvelle (DynamoDB, ElasticSearch).\vspace{5pt}
 
-        \textbf{AWS DevOps}: Experience with ElasticBeanStalk, EC2, S3, Lambda layers, CloudWatch, IAM, ECR, SES, SNS, VPC. Infra deployed with Cloudformation.\vspace{5pt}
+        \textbf{AWS DevOps}: Expérience avec Elastic Beanstalk, EC2, S3, Lambda Layers, CloudWatch, IAM, ECR, SES, SNS, VPC. Infra déployée avec CloudFormation.\vspace{5pt}
 
-        \textbf{Additional Work}: Maintained legacy PHP/YII stack and MySQL RDS; minor C\# developments supervised over Mono on Ubuntu\.vspace{5pt}
+        \textbf{Additional Work}: Maintenance ancienne pile PHP/YII; dévs C\# en Mono Linux\vspace{5pt}
 
-        \textbf{Architecture}: Monolithic, no microservice. Data model shared between UI \& API. Common gitlab repository for front-end and back-end.\vspace{5pt}
+        \textbf{Architecture}: Architecture monolithique, modèle de données partagé UI/API, dépôt GitLab unique pour front et back.\vspace{5pt}
 
-        \textbf{CI/CD}: pipelines over gitlab including linter, prettier, unitary tests, builder, ECR deployer, triggering Elastic Beanstalk's back-end environment update
+        \textbf{CI/CD}: Architecture monolithique, sans microservices. Modèle de données partagé entre UI et API. Dépôt GitLab commun pour front-end et back-end.
       }
     {Montreal} % Location on the second line, aligned to the right
 \end{cvtableNew}
@@ -357,7 +356,7 @@
 \begin{cvtableNew}
   \cvitemRightNew
     {Jan, 2017 – June, 2017} % Date
-    {Full Stack Developer in Healthcare Sector} % Job title
+    {Développeur Full Stack dans le secteur de la santé} % Job title
     {AlayaCare} % Company
     {
       \vspace{0.1pt} % Add space before "Role"
